# myautoresearch

./: .gitignore  AGENTS.md  README.md  designing.ipynb  pyproject.toml
examples/basis_tracking/: README.md  config.yaml  task.md
examples/basis_tracking/runs/submitted/ChebyshevFast/: __myautoresearch_evaluate__.py  info.json  logger.npz  metrics.json
examples/basis_tracking/runs/submitted/Eigh/: info.json  logger.npz  metrics.json
examples/basis_tracking/runs/submitted/Identity/: info.json  logger.npz  metrics.json  source.py
examples/basis_tracking/runs/submitted/LOBPCGFreq4/: info.json  lobpcg_freq4.py  logger.npz  metrics.json
examples/basis_tracking/runs/submitted/LazyEigh-10/: info.json  logger.npz  metrics.json
examples/basis_tracking/runs/submitted/LazySubspaceIter-3/: algorithm.py  info.json  logger.npz  metrics.json
examples/basis_tracking/runs/submitted/PowerIterFreq3/: info.json  logger.npz  metrics.json
myautoresearch/: __init__.py  _utils.py  cli.py  commands.py  evaluate_template.py  evaluator.py  logger.py  prompts.py  strings.py  utils.py
myautoresearch/templates/: __init__.py
myautoresearch/templates/tabular/: template.yaml
myautoresearch/templates/tabular/baselines/: logistic_regression.py  ridge.py  xgb_classifier.py  xgb_regressor.py
myautoresearch/templates/tabular/root/: README.md  config.yaml  task.md
myautoresearch/templates/tabular_stack/: __init__.py  template.yaml
myautoresearch/templates/tabular_stack/baselines/: baselines_classification.yaml  baselines_regression.yaml  ridge.py  xgb_classifier.py
(+134 files in other folders)
