# NEW VERSION TUTORIAL FOR MYSELF
# STEP 1 - COMMIT NEW CHANGES AND PUSH THEM
# STEP 2 - BUMP VERSION AND COMMIT IT (DONT PUSH!!!!)
# STEP 3 - CREATE TAG WITH THAT VERSION
# STEP 4 - PUSH (SYNC) CHANGES
# STEP 5 - PUSH TAG

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "myautoresearch"
description = "General purpose autoresearch"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "pyyaml",
    "click",
    "psutil",
    "scipy",
]
readme = "README.md"
authors = [
  {name = "Ivan Nikishev", email = "nkshv2@gmail.com"},
]
license = {file = "LICENSE"}
keywords = ["autoresearch"]


[project.urls]
Homepage = "https://github.com/inikishev/myautoresearch"
Repository = "https://github.com/inikishev/myautoresearch"
Issues = "https://github.com/inikishev/myautoresearch/isses"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

[project.scripts]
mar = "myautoresearch.cli:mar"
